# robocross

./: .gitignore  README.md  lidar_image_detect.py  requirements.txt
arduino/Car control/: CarControl.ino
arduino/Car control/src/: PedalMotor.h  eur2.h
arduino/CarControl/: CarControl.ino
arduino/CarControl/src/: Engine.h  GearboxMotor.h  PedalMotor.h  RC_receiver.h  eur2.h  gearbox.h
arduino/Electric power steering control/: steeringWheel.ino
arduino/Electric power steering control/steeringWheel/: steeringWheel.ino
obstacle_detection/: CMakeLists.txt
obstacle_detection/launch/: obstacle_detection.launch
obstacle_detection/src/: lidar_image_detect.py  obstacle_detection.cpp
sdgazelle/: CMakeLists.txt  hibernote.launch  map.launch  xavier.launch
sdgazelle/launch/: lidar_rosbag.launch  os1_obst.launch  simulation.launch  simulation_m1.launch  xavier.launch
sdgazelle/src/: car.py  carstatecontrol.py  gpsnode.py  lidar_image_detect.py  stereorecognizer.py  visualrecognizer.py  webdisplaynode.py
sdgazelle/src/data/: gpspath_real.csv  gpspath_sim.csv  histcar.csv
sdgazelle/src/static/: gazelle_map.js
